# iot-attendance

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml  requirements.txt
app/application/endpoints/: __init__.py  checkin_endpoint.py  configuration_endpoint.py  daily_summary_endpoint.py  permission_endpoint.py  user_endpoint.py
app/application/schemas/: checkin_schema.py  configuration_schema.py  daily_summary_schema.py  permission_schema.py  user_schema.py
app/core/: database.py  logger.py  settings.py
app/domain/models/: __init__.py  checkin.py  configuration.py  daily_summary.py  permission.py  user.py  user_permission.py
app/domain/services/: user_service.py
app/infrastructure/migrations/: env.py
app/infrastructure/migrations/versions/: 001_init_migration.py
app/infrastructure/repositories/: base_repository.py  checkin_repository.py  configuration_repository.py  daily_summary_repository.py  permission_repository.py  user_permission_repository.py  user_repository.py
backend/: alembic.ini  main.py  pyproject.toml
backend/app/application/endpoints/: __init__.py  user_endpoint.py
backend/app/application/schemas/: checkin_schema.py  configuration_schema.py  daily_summary_schema.py  user_schema.py
backend/app/core/: database.py  logger.py  settings.py
backend/app/domain/models/: configuration.py
backend/app/domain/services/: checkin_service.py
backend/app/infrastructure/migrations/: env.py
backend/app/infrastructure/repositories/: base_repository.py  checkin_repository.py  configuration_repository.py  daily_summary_repository.py
frontend/: .config.nodes.json  .config.nodes.json.backup  .config.projects.json  .config.projects.json.backup  .config.runtime.json  .config.runtime.json.backup  .config.users.json  .config.users.json.backup  package-lock.json  package.json  settings.js
